--- a/packages/hc_dispatcher_registry_control.yaml
+++ b/packages/hc_dispatcher_registry_control.yaml
@@ -555,12 +555,12 @@ automation:
                             entity_id: "{{ 'input_number.hc_dispatch_reg_' ~ z ~ '_system_override_f' }}"
                           data:
                             value: "{{ desired_temp }}"
-                    - default:
-                        - service: input_number.set_value
-                          target:
-                            entity_id: "{{ 'input_number.hc_dispatch_reg_' ~ z ~ '_system_override_f' }}"
-                          data:
-                            value: 0
+                  default:
+                    - service: input_number.set_value
+                      target:
+                        entity_id: "{{ 'input_number.hc_dispatch_reg_' ~ z ~ '_system_override_f' }}"
+                      data:
+                        value: 0
                 - service: input_boolean.turn_on
                   target:
                     entity_id: "{{ 'input_boolean.hc_dispatch_reg_' ~ z ~ '_batch_member' }}"
@@ -572,10 +572,10 @@ automation:
                         - service: input_boolean.turn_on
                           target:
                             entity_id: "{{ 'input_boolean.hc_dispatch_reg_' ~ z ~ '_batch_added' }}"
-                    - default:
-                        - service: input_boolean.turn_off
-                          target:
-                            entity_id: "{{ 'input_boolean.hc_dispatch_reg_' ~ z ~ '_batch_added' }}"
+                  default:
+                    - service: input_boolean.turn_off
+                      target:
+                        entity_id: "{{ 'input_boolean.hc_dispatch_reg_' ~ z ~ '_batch_added' }}"
       - service: input_boolean.turn_off
         target:
           entity_id: input_boolean.hc_dispatch_reg_apply_in_progress
