--- a/packages/hc_dispatcher_registry_guardrail.yaml
+++ b/packages/hc_dispatcher_registry_guardrail.yaml
@@ -72,13 +72,6 @@ template:
             {% set live_callers = live_ns.list %}
 
             {% set callers = frozen_callers if reg_state == 'batch_active' and frozen_callers|length > 0 else live_callers %}
-            {% set ext_ns = namespace(list=[]) %}
-            {% for z in live_callers %}
-              {% if z not in callers %}
-                {% set ext_ns.list = ext_ns.list + [z] %}
-              {% endif %}
-            {% endfor %}
-            {% set external_callers = ext_ns.list %}
 
             {% set near_ns = namespace(list=[]) %}
             {% for z in range(1,10) %}
@@ -184,6 +177,14 @@ template:
               {% set base_len_ns.total = base_len_ns.total + lengths.get(z, 0) %}
             {% endfor %}
             {% set base_length = base_len_ns.total %}
+
+            {% set ext_ns = namespace(list=[]) %}
+            {% for z in live_callers %}
+              {% if z not in base_zones %}
+                {% set ext_ns.list = ext_ns.list + [z] %}
+              {% endif %}
+            {% endfor %}
+            {% set external_callers = ext_ns.list %}
 
             {% set callers_len_ns = namespace(total=0) %}
             {% for z in callers %}
